<resources>
    <string name="app_name">Scavenger Radar</string>
    <string name="title_activity_maps">Scav Radar</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="inventory">Inventory</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity: </string>
    <string name="nullquant">null</string>
    <string name="menu">Menu</string>
    <string name="score">Score: </string>
    <string name="log_out">Log Out</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="menu_credits">Thanks to:\n www.flaticon.com\n  -Freepik\n  -Smashicons\n  -Maxim Basinski Premium\n  -ariefstudio\nwww.publicdomainvectors.org\nFor free assets used in this app!</string>
    <string name="self_credit">App by Oliver Barnes - 1905121\nFor Swansea University 2022</string>
</resources>